# shine-installer

./: Cargo.toml  LICENSE  build.rs
src/: installer.rs  main.rs
